--- a/inlhtmlcss2/index.html
+++ b/inlhtmlcss2/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet"> 
     <title>Document</title>
 </head>
 <body>
     <header>
         <nav class="navbarhead">
-            <p class="logo">LOGO</p>
+            <div class="logo"><button>LOGO</button>
+                </div>
             <ul>
                 <li><a href="menu 1">Menu 1</a></li>
                 <li><a href="menu 2">Menu 2</a></li>
@@ -23,7 +24,8 @@
     <main>
         <section class="mainpic">
             <h1 class="center">Här är en stor rubrik</h1>
-            <p class="center">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit expedita consequatur aliquam nesciunt! Esse molestiae illum explicabo quas modi perspiciatis.</p>
+            <p class="center">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit expedita amet consequatur aliquam nesciunt! Esse molestiae illum explicabot quas modi perspiciatis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde!
+            </p>
         </section>
         <section class="marg">
             <h2 class="fulline">Här är en rubrik</h2>
@@ -41,7 +43,7 @@
                     <h3>Här är en rubrik</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora totam quas ex ullam aut corrupti molestiae minima quidem numquam atque! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit, rem.</p>
                 </div>
-                <img class="half" class="imga" src="https://via.placeholder.com/555x360" alt="placeholder">
+                <img class="half" class="imga" class="response" src="https://via.placeholder.com/555x360" alt="placeholder">
             </article>
             <article class="share">
                 <img class="half" class="imga" src="https://via.placeholder.com/555x360" alt="placeholder">
@@ -53,8 +55,8 @@
         </section>
         <section class="flow">
             <h2 class="fulline">Här är en rubrik</h2>
-            <img class="picflow" class="imga" src="https://via.placeholder.com/165" alt="placeholder">
-            <img class="picflow" class="imga" src="https://via.placeholder.com/165" alt="placeholder">
+            <img class="picflow" src="https://via.placeholder.com/165" alt="placeholder" class="imga">
+            <img class="picflow" src="https://via.placeholder.com/165" alt="placeholder" class="imga">
             <img class="picflow" class="imga" src="https://via.placeholder.com/165" alt="placeholder">
             <img class="picflow" class="imga" src="https://via.placeholder.com/165" alt="placeholder">
             <img class="picflow" class="imga" src="https://via.placeholder.com/165" alt="placeholder">
@@ -64,8 +66,9 @@
         </section>
     </main>
     <footer>
-        <nav class="navbarfoot">
-            <p class="footlogo">LOGO</p>
+        <nav class="navbarfoot">      
+            <div class="footlogo"><button>LOGO</button>
+            </div>
             <ul>
                 <li><a href="menu 1">Menu 1</a></li>
                 <li><a href="menu 2">Menu 2</a></li>
