snyggat till share klassen mm.

--- a/inlhtmlcss2/index.html
+++ b/inlhtmlcss2/index.html
@@ -30,7 +30,7 @@
         <section class="marg">
             <h2 class="fulline">Här är en rubrik</h2>
             <article class="share">
-                <img class="half" class="imga" src="https://via.placeholder.com/555x360" alt="placeholder">
+                <img class="half"src="https://via.placeholder.com/555x360" alt="placeholder">
                 <div class="half">
                     <h3>Här är en rubrik</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora totam quas ex ullam aut corrupti molestiae minima quidem numquam atque! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit, at!
@@ -43,10 +43,10 @@
                     <h3>Här är en rubrik</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora totam quas ex ullam aut corrupti molestiae minima quidem numquam atque! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit, rem.</p>
                 </div>
-                <img class="half" class="imga" class="response" src="https://via.placeholder.com/555x360" alt="placeholder">
+                <img class="half" src="https://via.placeholder.com/555x360" alt="placeholder">
             </article>
             <article class="share">
-                <img class="half" class="imga" src="https://via.placeholder.com/555x360" alt="placeholder">
+                <img class="half" src="https://via.placeholder.com/555x360" alt="placeholder">
                 <div class="half">
                     <h3>Här är en rubrik</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora totam quas ex ullam aut corrupti molestiae minima quidem numquam atque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, numquam?</p>
@@ -54,15 +54,15 @@
             </article>   
         </section>
         <section class="flow">
-            <h2 class="fulline">Här är en rubrik</h2>
-            <img class="picflow" src="https://via.placeholder.com/165" alt="placeholder" class="imga">
-            <img class="picflow" src="https://via.placeholder.com/165" alt="placeholder" class="imga">
-            <img class="picflow" class="imga" src="https://via.placeholder.com/165" alt="placeholder">
-            <img class="picflow" class="imga" src="https://via.placeholder.com/165" alt="placeholder">
-            <img class="picflow" class="imga" src="https://via.placeholder.com/165" alt="placeholder">
-            <img class="picflow" class="imga" src="https://via.placeholder.com/165" alt="placeholder">
-            <img class="picflow" class="imga" src="https://via.placeholder.com/165" alt="placeholder">
-            <img class="picflow" class="imga" src="https://via.placeholder.com/165" alt="placeholder">
+            <h3 class="fulline2">Här är en rubrik</h3>
+            <img class="picflow" src="https://via.placeholder.com/165" alt="placeholder">
+            <img class="picflow" src="https://via.placeholder.com/165" alt="placeholder">
+            <img class="picflow" src="https://via.placeholder.com/165" alt="placeholder">
+            <img class="picflow" src="https://via.placeholder.com/165" alt="placeholder">
+            <img class="picflow" src="https://via.placeholder.com/165" alt="placeholder">
+            <img class="picflow" src="https://via.placeholder.com/165" alt="placeholder">
+            <img class="picflow" src="https://via.placeholder.com/165" alt="placeholder">
+            <img class="picflow" src="https://via.placeholder.com/165" alt="placeholder">
         </section>
     </main>
     <footer>
