allt från wireframen är tilllagt och stylat.

--- a/inlhtmlcss2/index.html
+++ b/inlhtmlcss2/index.html
@@ -64,6 +64,43 @@
             <img class="picflow" src="https://via.placeholder.com/165" alt="placeholder">
             <img class="picflow" src="https://via.placeholder.com/165" alt="placeholder">
         </section>
+        <section class="container">
+            <div class="text">
+                <h4>Donec id elit non mi porta gravida at eget metus.</h4>
+                <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Donec id elit non mi porta gravida at eget metus. </p>
+            </div>
+            <img class="gridpic a" src="https://via.placeholder.com/165" alt="placeholder">
+            <img class="gridpic b" src="https://via.placeholder.com/165" alt="placeholder">
+            <img class="gridpic c" src="https://via.placeholder.com/165x400" alt="placeholder">
+            <img class="gridpic d" src="https://via.placeholder.com/330x165" alt="placeholder">
+        </section>
+        <section class="container2">
+            <img class="gridpic e" src="https://via.placeholder.com/165" alt="placeholder">
+            <div class="inner-container">
+                <div class="first-text">
+                    <h4>Donec id elit non mi porta sage at eget </h4>
+                    <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Donec id elit non mi porta gravida at eget metus. </p>
+                </div>
+                <div class="second-text" >
+                    <h4>Donec id elit non mi porta hazing blob </h4>
+                    <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Donec id elit non mi porta gravida at eget metus. </p>
+                </div>
+            </div>
+        </section>
+        <section class="container3">
+            <img class="gridpic f" src="https://via.placeholder.com/165" alt="placeholder">
+            <img class="gridpic g" src="https://via.placeholder.com/165" alt="placeholder">
+            <img class="gridpic h" src="https://via.placeholder.com/165" alt="placeholder">
+            <img class="gridpic i" src="https://via.placeholder.com/330x165" alt="placeholder">
+            <div class="overlap-text">
+                <h4>Donec id elit non mi porta hazing </h4>
+                <p>Duis mollis, est non commodo luctus, nisi erat patata porttitor ligula, eget lacinia odio sem nec elit. Pator doctrus minoior lace i dono. Yonec id elit non mi porta gravida at eget metus.  Patrul li leiche dolic petrolium.</p>
+            </div>
+            <img class="gridpic j" src="https://via.placeholder.com/165" alt="placeholder">
+            <img class="gridpic k" src="https://via.placeholder.com/165" alt="placeholder">
+            <img class="gridpic l" src="https://via.placeholder.com/165X300" alt="placeholder">
+            <img class="gridpic m" src="https://via.placeholder.com/330x165" alt="placeholder">
+        </section>
     </main>
     <footer>
         <nav class="navbarfoot">      
