--- a/inlhtmlcss2/index.html
+++ b/inlhtmlcss2/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet"> 
     <title>Document</title>
 </head>
 <body>
     <header>
         <nav class="navbarhead">
-            <div class="logo"><button>LOGO</button>
+            <div class="logo"><button class="button">LOGO</button>
                 </div>
             <ul>
                 <li><a href="menu 1">Menu 1</a></li>
@@ -23,9 +23,11 @@
     </header>
     <main>
         <section class="mainpic">
-            <h1 class="center">Här är en stor rubrik</h1>
-            <p class="center">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit expedita amet consequatur aliquam nesciunt! Esse molestiae illum explicabot quas modi perspiciatis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde!
-            </p>
+            <div class="center">
+                <h1 >Här är en stor rubrik</h1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit expedita amet consequatur aliquam nesciunt! Esse molestiae illum explicabot quas modi perspiciatis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde!
+                </p>
+            </div>
         </section>
         <section class="marg">
             <h2 class="fulline">Här är en rubrik</h2>
@@ -64,30 +66,30 @@
             <img class="picflow" src="https://via.placeholder.com/165" alt="placeholder">
             <img class="picflow" src="https://via.placeholder.com/165" alt="placeholder">
         </section>
-        <section class="container">
-            <div class="text">
+        <section class="article-collage">
+            <div class="collage-text">
                 <h4>Donec id elit non mi porta gravida at eget metus.</h4>
                 <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Donec id elit non mi porta gravida at eget metus. </p>
             </div>
-            <img class="gridpic a" src="https://via.placeholder.com/165" alt="placeholder">
-            <img class="gridpic b" src="https://via.placeholder.com/165" alt="placeholder">
-            <img class="gridpic c" src="https://via.placeholder.com/165x400" alt="placeholder">
-            <img class="gridpic d" src="https://via.placeholder.com/330x165" alt="placeholder">
+            <img class="gridpic collage-img1" src="https://via.placeholder.com/165" alt="placeholder">
+            <img class="gridpic collage-img2" src="https://via.placeholder.com/165" alt="placeholder">
+            <img class="gridpic collage-img3" src="https://via.placeholder.com/165x400" alt="placeholder">
+            <img class="gridpic collage-img4" src="https://via.placeholder.com/330x165" alt="placeholder">
         </section>
-        <section class="container2">
-            <img class="gridpic e" src="https://via.placeholder.com/165" alt="placeholder">
-            <div class="inner-container">
-                <div class="first-text">
+        <section class="newsAboutUs">
+            <img class="gridpic newsPic" src="https://via.placeholder.com/165" alt="placeholder">
+            <div class="inner-container-news">
+                <div class="first-news-text">
                     <h4>Donec id elit non mi porta sage at eget </h4>
                     <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Donec id elit non mi porta gravida at eget metus. </p>
                 </div>
-                <div class="second-text" >
+                <div class="second-news-text" >
                     <h4>Donec id elit non mi porta hazing blob </h4>
                     <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Donec id elit non mi porta gravida at eget metus. </p>
                 </div>
             </div>
         </section>
-        <section class="container3">
+        <section class="article-with-overlap">
             <img class="gridpic f" src="https://via.placeholder.com/165" alt="placeholder">
             <img class="gridpic g" src="https://via.placeholder.com/165" alt="placeholder">
             <img class="gridpic h" src="https://via.placeholder.com/165" alt="placeholder">
@@ -104,7 +106,7 @@
     </main>
     <footer>
         <nav class="navbarfoot">      
-            <div class="footlogo"><button>LOGO</button>
+            <div class="footlogo"><button class="button">LOGO</button>
             </div>
             <ul>
                 <li><a href="menu 1">Menu 1</a></li>
