--- a/inlhtmlcss2/index.html
+++ b/inlhtmlcss2/index.html
@@ -32,7 +32,8 @@
         <section class="marg">
             <h2 class="fulline">Här är en rubrik</h2>
             <article class="share">
-                <img class="half"src="https://via.placeholder.com/555x360" alt="placeholder">
+                <!-- <div class="picturewrapper"> -->
+                    <img class="half picture"src="https://via.placeholder.com/555x360" alt="placeholder">
                 <div class="half">
                     <h3>Här är en rubrik</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora totam quas ex ullam aut corrupti molestiae minima quidem numquam atque! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit, at!
@@ -45,10 +46,12 @@
                     <h3>Här är en rubrik</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora totam quas ex ullam aut corrupti molestiae minima quidem numquam atque! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit, rem.</p>
                 </div>
-                <img class="half" src="https://via.placeholder.com/555x360" alt="placeholder">
+                <!-- <div class="picturewrapper"> -->
+                    <img class="half picture" src="https://via.placeholder.com/555x360" alt="placeholder">
             </article>
             <article class="share">
-                <img class="half" src="https://via.placeholder.com/555x360" alt="placeholder">
+                <!-- <div class="picturewrapper"> -->
+                    <img class="half picture" src="https://via.placeholder.com/555x360" alt="placeholder">
                 <div class="half">
                     <h3>Här är en rubrik</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora totam quas ex ullam aut corrupti molestiae minima quidem numquam atque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, numquam?</p>
