Fortsatt göra responsivt
Artikellistan är fortfarnde inte mobil first

--- a/inlhtmlcss2/index.html
+++ b/inlhtmlcss2/index.html
@@ -74,13 +74,15 @@
                 <h4>Donec id elit non mi porta gravida at eget metus.</h4>
                 <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Donec id elit non mi porta gravida at eget metus. </p>
             </div>
+            <div class="collage-pictures">
             <img class="gridpic collage-img1" src="https://via.placeholder.com/165" alt="placeholder">
             <img class="gridpic collage-img2" src="https://via.placeholder.com/165" alt="placeholder">
             <img class="gridpic collage-img3" src="https://via.placeholder.com/165x400" alt="placeholder">
             <img class="gridpic collage-img4" src="https://via.placeholder.com/330x165" alt="placeholder">
+            </div>
         </section>
         <section class="newsAboutUs">
-            <img class="gridpic newsPic" src="https://via.placeholder.com/165" alt="placeholder">
+            <div class="newspicWrapper"><img class="gridpic newsPic" src="https://via.placeholder.com/165" alt="placeholder"></div>
             <div class="inner-container-news">
                 <div class="first-news-text">
                     <h4>Donec id elit non mi porta sage at eget </h4>
@@ -93,18 +95,18 @@
             </div>
         </section>
         <section class="article-with-overlap">
-            <img class="gridpic f" src="https://via.placeholder.com/165" alt="placeholder">
-            <img class="gridpic g" src="https://via.placeholder.com/165" alt="placeholder">
-            <img class="gridpic h" src="https://via.placeholder.com/165" alt="placeholder">
-            <img class="gridpic i" src="https://via.placeholder.com/330x165" alt="placeholder">
+            <img class="gridpic overlap-article-img1" src="https://via.placeholder.com/165" alt="placeholder">
+            <img class="gridpic overlap-article-img2" src="https://via.placeholder.com/165" alt="placeholder">
+            <img class="gridpic overlap-article-img3" src="https://via.placeholder.com/165" alt="placeholder">
+            <img class="gridpic overlap-article-img4" src="https://via.placeholder.com/330x165" alt="placeholder">
             <div class="overlap-text">
                 <h4>Donec id elit non mi porta hazing </h4>
                 <p>Duis mollis, est non commodo luctus, nisi erat patata porttitor ligula, eget lacinia odio sem nec elit. Pator doctrus minoior lace i dono. Yonec id elit non mi porta gravida at eget metus.  Patrul li leiche dolic petrolium.</p>
             </div>
-            <img class="gridpic j" src="https://via.placeholder.com/165" alt="placeholder">
-            <img class="gridpic k" src="https://via.placeholder.com/165" alt="placeholder">
-            <img class="gridpic l" src="https://via.placeholder.com/165X300" alt="placeholder">
-            <img class="gridpic m" src="https://via.placeholder.com/330x165" alt="placeholder">
+            <img class="gridpic overlap-article-img5" src="https://via.placeholder.com/165" alt="placeholder">
+            <img class="gridpic overlap-article-img6" src="https://via.placeholder.com/165" alt="placeholder">
+            <img class="gridpic overlap-article-img7" src="https://via.placeholder.com/165X300" alt="placeholder">
+            <img class="gridpic overlap-article-img8" src="https://via.placeholder.com/330x165" alt="placeholder">
         </section>
     </main>
     <footer>
