Fortsatt göra responsiv. Artikel listan är fortfarande inte mobil first

--- a/inlhtmlcss2/index.html
+++ b/inlhtmlcss2/index.html
@@ -95,18 +95,18 @@
             </div>
         </section>
         <section class="article-with-overlap">
-            <img class="gridpic overlap-article-img1" src="https://via.placeholder.com/165" alt="placeholder">
-            <img class="gridpic overlap-article-img2" src="https://via.placeholder.com/165" alt="placeholder">
-            <img class="gridpic overlap-article-img3" src="https://via.placeholder.com/165" alt="placeholder">
-            <img class="gridpic overlap-article-img4" src="https://via.placeholder.com/330x165" alt="placeholder">
+            <div class="overlappicWrapper overlap-article-img1 "><img class="gridpic position" src="https://via.placeholder.com/165" alt="placeholder"></div>
+            <div class="overlappicWrapper overlap-article-img2"><img class="gridpic position" src="https://via.placeholder.com/165" alt="placeholder"></div>
+            <div class="overlappicWrapper overlap-article-img3"><img class="gridpic position" src="https://via.placeholder.com/165" alt="placeholder"></div>
+            <div class="overlappicWrapper overlap-article-img4"><img class="gridpic position" src="https://via.placeholder.com/330x165" alt="placeholder"></div>
             <div class="overlap-text">
                 <h4>Donec id elit non mi porta hazing </h4>
                 <p>Duis mollis, est non commodo luctus, nisi erat patata porttitor ligula, eget lacinia odio sem nec elit. Pator doctrus minoior lace i dono. Yonec id elit non mi porta gravida at eget metus.  Patrul li leiche dolic petrolium.</p>
             </div>
-            <img class="gridpic overlap-article-img5" src="https://via.placeholder.com/165" alt="placeholder">
-            <img class="gridpic overlap-article-img6" src="https://via.placeholder.com/165" alt="placeholder">
-            <img class="gridpic overlap-article-img7" src="https://via.placeholder.com/165X300" alt="placeholder">
-            <img class="gridpic overlap-article-img8" src="https://via.placeholder.com/330x165" alt="placeholder">
+            <div class="overlappicWrapper overlap-article-img5"><img class="gridpic position" src="https://via.placeholder.com/165" alt="placeholder"></div>
+            <div class="overlappicWrapper overlap-article-img6"><img class="gridpic position" src="https://via.placeholder.com/165" alt="placeholder"></div>
+            <div class="overlappicWrapper overlap-article-img7"><img class="gridpic position" src="https://via.placeholder.com/165X300" alt="placeholder"></div>
+            <div class="overlappicWrapper overlap-article-img8"><img class="gridpic position" src="https://via.placeholder.com/330x165" alt="placeholder"></div>
         </section>
     </main>
     <footer>
