La till bilder och text och har börjat lägga till variabler.

--- a/inlhtmlcss2/index.html
+++ b/inlhtmlcss2/index.html
@@ -6,13 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="styles/style.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Unica+One&display=swap" rel="stylesheet"> 
     <title>Document</title>
 </head>
 <body>
     <header>
         <nav class="navbarhead">
-            <div class="logo"><button class="button">LOGO</button>
-                </div>
+            <div class="logo">TRAVELSoN</div>
             <ul>
                 <li><a href="menu 1">Menu 1</a></li>
                 <li><a href="menu 2">Menu 2</a></li>
@@ -24,18 +24,18 @@
     <main>
         <section class="mainpic">
             <div class="center">
-                <h1 >Här är en stor rubrik</h1>
+                <h1>Life is Travel</h1>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit expedita amet consequatur aliquam nesciunt! Esse molestiae illum explicabot quas modi perspiciatis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde!
                 </p>
             </div>
         </section>
         <section class="marg">
-            <h2 class="fulline">Här är en rubrik</h2>
+            <h2 class="fulline">The world around the corner</h2>
             <article class="share">
                 <!-- <div class="picturewrapper"> -->
-                    <img class="half picture"src="https://via.placeholder.com/555x360" alt="placeholder">
+                    <img class="half picture"src="pics/bild1.jpg" alt="placeholder">
                 <div class="half">
-                    <h3>Här är en rubrik</h3>
+                    <h3>Everywhere human</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora totam quas ex ullam aut corrupti molestiae minima quidem numquam atque! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit, at!
 
                     </p>
@@ -43,76 +43,75 @@
             </article>
             <article class="share">
                 <div class="half" class="cent">
-                    <h3>Här är en rubrik</h3>
+                    <h3>Explore</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora totam quas ex ullam aut corrupti molestiae minima quidem numquam atque! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit, rem.</p>
                 </div>
                 <!-- <div class="picturewrapper"> -->
-                    <img class="half picture" src="https://via.placeholder.com/555x360" alt="placeholder">
+                    <img class="half picture" src="pics/bild2.jpg" alt="placeholder">
             </article>
             <article class="share">
                 <!-- <div class="picturewrapper"> -->
-                    <img class="half picture" src="https://via.placeholder.com/555x360" alt="placeholder">
+                    <img class="half picture" src="pics/bild3.jpg" alt="placeholder">
                 <div class="half">
-                    <h3>Här är en rubrik</h3>
+                    <h3>Under the sky</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora totam quas ex ullam aut corrupti molestiae minima quidem numquam atque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, numquam?</p>
                 </div>
             </article>   
         </section>
         <section class="flow">
-            <h3 class="fulline2">Här är en rubrik</h3>
-            <img class="picflow" src="https://via.placeholder.com/165" alt="placeholder">
-            <img class="picflow" src="https://via.placeholder.com/165" alt="placeholder">
-            <img class="picflow" src="https://via.placeholder.com/165" alt="placeholder">
-            <img class="picflow" src="https://via.placeholder.com/165" alt="placeholder">
-            <img class="picflow" src="https://via.placeholder.com/165" alt="placeholder">
-            <img class="picflow" src="https://via.placeholder.com/165" alt="placeholder">
-            <img class="picflow" src="https://via.placeholder.com/165" alt="placeholder">
-            <img class="picflow" src="https://via.placeholder.com/165" alt="placeholder">
+            <h3 class="fulline2">Where feets belong</h3>
+            <img class="picflow" src="pics/feet-1.jpg" alt="placeholder">
+            <img class="picflow" src="pics/feet-2.jpg" alt="placeholder">
+            <img class="picflow" src="pics/feet-3.jpg" alt="placeholder">
+            <img class="picflow" src="pics/feet-4.jpg" alt="placeholder">
+            <img class="picflow" src="pics/feet-5.jpg" alt="placeholder">
+            <img class="picflow" src="pics/feet-6.jpg" alt="placeholder">
+            <img class="picflow" src="pics/feet-7.jpg" alt="placeholder">
+            <img class="picflow" src="pics/feet-8.jpg" alt="placeholder">
         </section>
         <section class="article-collage">
             <div class="collage-text">
-                <h4>Donec id elit non mi porta gravida at eget metus.</h4>
+                <h4>Roads through wilderness</h4>
                 <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Donec id elit non mi porta gravida at eget metus. </p>
             </div>
             <div class="collage-pictures">
-            <img class="gridpic collage-img1" src="https://via.placeholder.com/165" alt="placeholder">
-            <img class="gridpic collage-img2" src="https://via.placeholder.com/165" alt="placeholder">
-            <img class="gridpic collage-img3" src="https://via.placeholder.com/165x400" alt="placeholder">
-            <img class="gridpic collage-img4" src="https://via.placeholder.com/330x165" alt="placeholder">
+            <img class="gridpic collage-img1" src="pics/bild5.1.jpg" alt="placeholder">
+            <img class="gridpic collage-img2" src="pics/bild6.jpg" alt="placeholder">
+            <img class="gridpic collage-img3" src="pics/bild8.jpg" alt="placeholder">
+            <img class="gridpic collage-img4" src="pics/bild7.1.jpg" alt="placeholder">
             </div>
         </section>
         <section class="newsAboutUs">
-            <div class="newspicWrapper"><img class="gridpic newsPic" src="https://via.placeholder.com/165" alt="placeholder"></div>
+            <div class="newspicWrapper"><img class="gridpic newsPic" src="pics/bild9.jpg" alt="placeholder"></div>
             <div class="inner-container-news">
                 <div class="first-news-text">
-                    <h4>Donec id elit non mi porta sage at eget </h4>
+                    <h4>Beyond the pole </h4>
                     <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Donec id elit non mi porta gravida at eget metus. </p>
                 </div>
                 <div class="second-news-text" >
-                    <h4>Donec id elit non mi porta hazing blob </h4>
+                    <h4>Awakening nature</h4>
                     <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Donec id elit non mi porta gravida at eget metus. </p>
                 </div>
             </div>
         </section>
         <section class="article-with-overlap">
-            <div class="overlappicWrapper overlap-article-img1 "><img class="gridpic position" src="https://via.placeholder.com/165" alt="placeholder"></div>
-            <div class="overlappicWrapper overlap-article-img2"><img class="gridpic position" src="https://via.placeholder.com/165" alt="placeholder"></div>
-            <div class="overlappicWrapper overlap-article-img3"><img class="gridpic position" src="https://via.placeholder.com/165" alt="placeholder"></div>
-            <div class="overlappicWrapper overlap-article-img4"><img class="gridpic position" src="https://via.placeholder.com/330x165" alt="placeholder"></div>
+            <div class="overlappicWrapper overlap-article-img1 "><img class="gridpic position" src="pics/bild10.1.jpg" alt="placeholder"></div>
+            <div class="overlappicWrapper overlap-article-img2"><img class="gridpic position" src="pics/bild11.1.jpg" alt="placeholder"></div>
+            <div class="overlappicWrapper overlap-article-img3"><img class="gridpic position" src="pics/bild12.1.jpg" alt="placeholder"></div>
+            <div class="overlappicWrapper overlap-article-img4"><img class="gridpic position" src="pics/bild13.1.jpg" alt="placeholder"></div>
             <div class="overlap-text">
-                <h4>Donec id elit non mi porta hazing </h4>
+                <h4>Don’t miss the next adventure</h4>
                 <p>Duis mollis, est non commodo luctus, nisi erat patata porttitor ligula, eget lacinia odio sem nec elit. Pator doctrus minoior lace i dono. Yonec id elit non mi porta gravida at eget metus.  Patrul li leiche dolic petrolium.</p>
             </div>
-            <div class="overlappicWrapper overlap-article-img5"><img class="gridpic position" src="https://via.placeholder.com/165" alt="placeholder"></div>
-            <div class="overlappicWrapper overlap-article-img6"><img class="gridpic position" src="https://via.placeholder.com/165" alt="placeholder"></div>
-            <div class="overlappicWrapper overlap-article-img7"><img class="gridpic position" src="https://via.placeholder.com/165X300" alt="placeholder"></div>
-            <div class="overlappicWrapper overlap-article-img8"><img class="gridpic position" src="https://via.placeholder.com/330x165" alt="placeholder"></div>
+            <div class="overlappicWrapper overlap-article-img5"><img class="gridpic position" src="pics/bild14.1.jpg" alt="placeholder"></div>
+            <div class="overlappicWrapper overlap-article-img6"><img class="gridpic position" src="pics/bild15.jpg" alt="placeholder"></div>
+            <div class="overlappicWrapper overlap-article-img7"><img class="gridpic position" src="pics/bild16.1.jpg" alt="placeholder"></div>
+            <div class="overlappicWrapper overlap-article-img8"><img class="gridpic position" src="pics/bild17.1.jpg" alt="placeholder"></div>
         </section>
     </main>
     <footer>
         <nav class="navbarfoot">      
-            <div class="footlogo"><button class="button">LOGO</button>
-            </div>
+            <div class="footlogo">TRAVELSoN</div>
             <ul>
                 <li><a href="menu 1">Menu 1</a></li>
                 <li><a href="menu 2">Menu 2</a></li>
