Lagt till extends, mixins och variabler. Börjat med BEM.

--- a/inlhtmlcss2/index.html
+++ b/inlhtmlcss2/index.html
@@ -13,11 +13,11 @@
     <header>
         <nav class="navbarhead">
             <div class="logo">TRAVELSoN</div>
-            <ul>
-                <li><a href="menu 1">Menu 1</a></li>
-                <li><a href="menu 2">Menu 2</a></li>
-                <li><a href="menu 3">Menu 3</a></li>
-                <li><a href="menu 4">Menu 4</a></li>
+            <ul class="navbartop">
+                <li class="navbartop__item"><a class="navbartop__item--no-link" href="menu 1">Menu 1</a></li>
+                <li class="navbartop__item"><a class="navbartop__item--no-link" href="menu 2">Menu 2</a></li>
+                <li class="navbartop__item"><a class="navbartop__item--no-link" href="menu 3">Menu 3</a></li>
+                <li class="navbartop__item"><a class="navbartop__item--no-link" href="menu 4">Menu 4</a></li>
             </ul>
         </nav>
     </header>
