skickar upp eftersom datorn laggar

--- a/inlhtmlcss2/index.html
+++ b/inlhtmlcss2/index.html
@@ -14,10 +14,10 @@
         <nav class="navbarhead">
             <div class="logo">TRAVELSoN</div>
             <ul class="navbartop">
-                <li class="navbartop__item"><a class="navbartop__item--no-link" href="menu 1">Menu 1</a></li>
-                <li class="navbartop__item"><a class="navbartop__item--no-link" href="menu 2">Menu 2</a></li>
-                <li class="navbartop__item"><a class="navbartop__item--no-link" href="menu 3">Menu 3</a></li>
-                <li class="navbartop__item"><a class="navbartop__item--no-link" href="menu 4">Menu 4</a></li>
+                <li class="navbartop__item"><a class="navbartop__item--style-link" href="menu 1">Menu 1</a></li>
+                <li class="navbartop__item"><a class="navbartop__item--style-link" href="menu 2">Menu 2</a></li>
+                <li class="navbartop__item"><a class="navbartop__item--style-link" href="menu 3">Menu 3</a></li>
+                <li class="navbartop__item"><a class="navbartop__item--style-link" href="menu 4">Menu 4</a></li>
             </ul>
         </nav>
     </header>
@@ -58,27 +58,27 @@
                 </div>
             </article>   
         </section>
-        <section class="flow">
-            <h3 class="fulline2">Where feets belong</h3>
-            <img class="picflow" src="pics/feet-1.jpg" alt="placeholder">
-            <img class="picflow" src="pics/feet-2.jpg" alt="placeholder">
-            <img class="picflow" src="pics/feet-3.jpg" alt="placeholder">
-            <img class="picflow" src="pics/feet-4.jpg" alt="placeholder">
-            <img class="picflow" src="pics/feet-5.jpg" alt="placeholder">
-            <img class="picflow" src="pics/feet-6.jpg" alt="placeholder">
-            <img class="picflow" src="pics/feet-7.jpg" alt="placeholder">
-            <img class="picflow" src="pics/feet-8.jpg" alt="placeholder">
+        <section class="flow-pictures">
+            <h3 class="flow-pictures__fulline2">Where feets belong</h3>
+            <img class="flow-pictures__picflow flow-pictures__picflow--picsize" src="pics/feet-1.jpg" alt="placeholder">
+            <img class="flow-pictures__picflow flow-pictures__picflow--picsize" src="pics/feet-2.jpg" alt="placeholder">
+            <img class="flow-pictures__picflow flow-pictures__picflow--picsize" src="pics/feet-3.jpg" alt="placeholder">
+            <img class="flow-pictures__picflow flow-pictures__picflow--picsize" src="pics/feet-4.jpg" alt="placeholder">
+            <img class="flow-pictures__picflow flow-pictures__picflow--picsize" src="pics/feet-5.jpg" alt="placeholder">
+            <img class="flow-pictures__picflow flow-pictures__picflow--picsize" src="pics/feet-6.jpg" alt="placeholder">
+            <img class="flow-pictures__picflow flow-pictures__picflow--picsize" src="pics/feet-7.jpg" alt="placeholder">
+            <img class="flow-pictures__picflow flow-pictures__picflow--picsize" src="pics/feet-8.jpg" alt="placeholder">
         </section>
         <section class="article-collage">
-            <div class="collage-text">
-                <h4>Roads through wilderness</h4>
-                <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Donec id elit non mi porta gravida at eget metus. </p>
+            <div class="article-collage__text">
+                <h4 class="article-collage__text--bigsize">Roads through wilderness</h4>
+                <p class="article-collage__text--textsize">Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Donec id elit non mi porta gravida at eget metus. </p>
             </div>
             <div class="collage-pictures">
-            <img class="gridpic collage-img1" src="pics/bild5.1.jpg" alt="placeholder">
-            <img class="gridpic collage-img2" src="pics/bild6.jpg" alt="placeholder">
-            <img class="gridpic collage-img3" src="pics/bild8.jpg" alt="placeholder">
-            <img class="gridpic collage-img4" src="pics/bild7.1.jpg" alt="placeholder">
+            <img class="collage-pictures__img1 collage-pictures--position gridpic" src="pics/bild5.1.jpg" alt="placeholder">
+            <img class="collage-pictures__img2 collage-pictures--position gridpic " src="pics/bild6.jpg" alt="placeholder">
+            <img class="collage-pictures__img3 collage-pictures--position gridpic" src="pics/bild8.jpg" alt="placeholder">
+            <img class="collage-pictures__img4 collage-pictures--position" src="pics/bild7.1.jpg" alt="placeholder">
             </div>
         </section>
         <section class="newsAboutUs">
