Klar med alla kriterier.

--- a/inlhtmlcss2/index.html
+++ b/inlhtmlcss2/index.html
@@ -32,7 +32,6 @@
         <section class="marg">
             <h2 class="fulline">The world around the corner</h2>
             <article class="share">
-                <!-- <div class="picturewrapper"> -->
                     <img class="half picture"src="pics/bild1.jpg" alt="placeholder">
                 <div class="half">
                     <h3>Everywhere human</h3>
@@ -46,11 +45,9 @@
                     <h3>Explore</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora totam quas ex ullam aut corrupti molestiae minima quidem numquam atque! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit, rem.</p>
                 </div>
-                <!-- <div class="picturewrapper"> -->
                     <img class="half picture" src="pics/bild2.jpg" alt="placeholder">
             </article>
             <article class="share">
-                <!-- <div class="picturewrapper"> -->
                     <img class="half picture" src="pics/bild3.jpg" alt="placeholder">
                 <div class="half">
                     <h3>Under the sky</h3>
@@ -75,10 +72,10 @@
                 <p class="article-collage__text--textsize">Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Donec id elit non mi porta gravida at eget metus. </p>
             </div>
             <div class="collage-pictures">
-            <img class="collage-pictures__img1 collage-pictures--position gridpic" src="pics/bild5.1.jpg" alt="placeholder">
-            <img class="collage-pictures__img2 collage-pictures--position gridpic " src="pics/bild6.jpg" alt="placeholder">
-            <img class="collage-pictures__img3 collage-pictures--position gridpic" src="pics/bild8.jpg" alt="placeholder">
-            <img class="collage-pictures__img4 collage-pictures--position" src="pics/bild7.1.jpg" alt="placeholder">
+            <img class="collage-pictures__img1 gridpic" src="pics/bild5.1.jpg" alt="placeholder">
+            <img class="collage-pictures__img2 gridpic" src="pics/bild6.jpg" alt="placeholder">
+            <img class="collage-pictures__img3 gridpic" src="pics/bild8.jpg" alt="placeholder">
+            <img class="collage-pictures__img4 gridpic" src="pics/bild7.1.jpg" alt="placeholder">
             </div>
         </section>
         <section class="newsAboutUs">
